--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,58 +1,118 @@
 {
+    // Extension Management
     "extensions.ignoreRecommendations": false,
     "extensions.autoUpdate": true,
     "extensions.autoCheckUpdates": true,
 
+    // Editor Performance & UX
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 800,
     "files.trimTrailingWhitespace": true,
     "editor.formatOnSave": true,
     "editor.inlineSuggest.enabled": true,
-    "editor.quickSuggestions": { "other": true, "comments": false, "strings": true },
+    "editor.quickSuggestions": { "other": "on", "comments": false, "strings": "on" },
+    "editor.suggestSelection": "first",
+    "editor.tabCompletion": "on",
+    "editor.acceptSuggestionOnCommitCharacter": true,
+    "editor.acceptSuggestionOnEnter": "on",
+    "editor.wordBasedSuggestions": "matchingDocuments",
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit",
         "source.organizeImports": "explicit"
     },
+    "editor.minimap.enabled": true,
+    "editor.minimap.maxColumn": 120,
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs": "active",
+    "editor.stickyScroll.enabled": true,
+    "editor.renderWhitespace": "boundary",
+    "editor.rulers": [100, 120],
+    "editor.linkedEditing": true,
 
+    // Workbench Performance
     "telemetry.telemetryLevel": "off",
     "workbench.editor.enablePreview": false,
     "workbench.enableExperiments": false,
+    "workbench.editor.limit.enabled": true,
+    "workbench.editor.limit.value": 10,
+    "workbench.editor.limit.perEditorGroup": true,
+    "workbench.startupEditor": "none",
+    "workbench.tree.indent": 20,
     "security.workspace.trust.enabled": true,
 
+    // Python Configuration
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.formatting.provider": "black",
-    "python.formatting.blackArgs": ["--line-length", "100"],
+    "python.formatting.blackArgs": ["--line-length", "88"],
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": ["-q"],
+    "python.testing.pytestArgs": ["-q", "--tb=short"],
+    "python.testing.autoTestDiscoverOnSaveEnabled": true,
     "python.terminal.activateEnvironment": true,
     "python.analysis.typeCheckingMode": "standard",
     "python.analysis.diagnosticMode": "workspace",
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.completeFunctionParens": true,
+    "python.analysis.inlayHints.functionReturnTypes": true,
+    "python.analysis.inlayHints.variableTypes": true,
+    "python.analysis.indexing": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": false,
     "python.linting.mypyEnabled": false,
-    "[python]": { "editor.defaultFormatter": "ms-python.black-formatter" },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnType": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        }
+    },
 
+    // Ruff Linting
     "python.linting.enabled": true,
     "python.linting.ruffEnabled": true,
     "ruff.organizeImports": true,
     "ruff.lint.args": ["--select", "E,W,F,B,I"],
+    "ruff.enable": true,
 
+    // File Exclusions for Performance
     "files.exclude": {
         "**/.git/**": true,
         "**/__pycache__/**": true,
         "**/.pytest_cache/**": true,
+        "**/.mypy_cache/**": true,
+        "**/.ruff_cache/**": true,
         "**/.venv/**": true,
         "**/dist/**": true,
-        "**/node_modules/**": true
+        "**/build/**": true,
+        "**/out/**": true,
+        "**/node_modules/**": true,
+        "**/*.pyc": true,
+        "**/.DS_Store": true
     },
     "files.watcherExclude": {
         "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
         "**/__pycache__/**": true,
         "**/.pytest_cache/**": true,
+        "**/.mypy_cache/**": true,
+        "**/.ruff_cache/**": true,
         "**/.venv/**": true,
         "**/dist/**": true,
-        "**/node_modules/**": true
+        "**/build/**": true,
+        "**/out/**": true,
+        "**/node_modules/**": true,
+        "**/*.pyc": true
+    },
+    "search.exclude": {
+        "**/.venv": true,
+        "**/dist": true,
+        "**/build": true,
+        "**/out": true,
+        "**/__pycache__": true,
+        "**/.pytest_cache": true,
+        "**/.mypy_cache": true,
+        "**/.ruff_cache": true,
+        "**/node_modules": true
     },
 
     "markdownlint.config": {
@@ -65,34 +125,108 @@
     "yaml.schemaStore.enable": true,
     "[yaml]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
 
+    // Terminal Configuration
     "terminal.integrated.defaultProfile.linux": "bash",
-    "task.allowAutomaticTasksOnStartup": "off",
     "terminal.integrated.persistentSessionReviveProcess": "onExit",
+    "terminal.integrated.enablePersistentSessions": true,
+    "terminal.integrated.scrollback": 10000,
+    "terminal.integrated.fastScrollSensitivity": 5,
+    "task.allowAutomaticTasksOnStartup": "off",
 
+    // GitHub Copilot & AI
     "copilot.enable": { "*": true },
     "github.copilot.enable": {
         "*": true,
         "plaintext": false,
-        "markdown": false,
-        "scminput": false
+        "markdown": true,
+        "scminput": false,
+        "yaml": true,
+        "json": true,
+        "jsonc": true,
+        "python": true
     },
+    "github.copilot.editor.enableAutoCompletions": true,
     "github.copilot.chat.codeGeneration.instructions": [
         {
-            "text": "You are an expert AI programming assistant working in VS Code. Follow user requirements carefully. Keep answers short and impersonal. Use proper Markdown formatting."
+            "text": "You are an expert AI programming assistant for Fractal5 Solutions' Dominion OS project. Focus on sovereign AI, cybernetic systems, autonomous orchestration, and enterprise-grade development. Follow user requirements carefully. Keep answers short and impersonal. Use proper Markdown formatting. Prioritize security, performance, and autonomous operations."
         }
     ],
+    "github.copilot.chat.localeOverride": "en",
+    "github.copilot.advanced": {
+        "debug.overrideEngine": "",
+        "debug.testOverrideProxyUrl": "",
+        "debug.overrideProxyUrl": "",
+        "inlineSuggestCount": 3
+    },
 
+    // Git Configuration
     "git.autofetch": true,
     "git.enableSmartCommit": true,
     "git.confirmSync": false,
+    "git.autoStash": false,
+    "git.fetchOnPull": true,
+    "git.pruneOnFetch": true,
+    "git.rebaseWhenSync": false,
+    "git.detectSubmodules": true,
+    "git.timeline.showAuthor": true,
+    "gitlens.showWelcomeOnInstall": false,
+    "gitlens.showWhatsNewAfterUpgrades": false,
 
+    // Docker & Cloud
     "docker.showStartPage": false,
     "cloudcode.enableTelemetry": false,
 
+    // PowerShell
     "powershell.powerShellDefaultVersion": "PowerShell Core 7+ (x64)",
     "powershell.integratedConsole.showOnStartup": false,
 
+    // File Formatters
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[markdown]": {
+        "editor.defaultFormatter": "yzhang.markdown-all-in-one",
+        "editor.wordWrap": "on"
+    },
+
+    // ESLint & Prettier
     "eslint.workingDirectories": ["."],
+    "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
     "prettier.configPath": "",
-    "prettier.ignorePath": ".prettierignore"
+    "prettier.ignorePath": ".prettierignore",
+    "prettier.requireConfig": false,
+
+    // UI Customization for Autonomous Development
+    "todo-tree.general.tags": ["TODO", "FIXME", "NOTE", "PHI", "AUTONOMOUS", "SOVEREIGN", "NHITL"],
+    "todo-tree.highlights.defaultHighlight": {
+        "icon": "alert",
+        "type": "text",
+        "foreground": "#000000",
+        "background": "#ffff00"
+    },
+
+    // Spell Checker
+    "cSpell.enabled": true,
+    "cSpell.words": [
+        "dominion",
+        "fractal",
+        "cybernetic",
+        "nhitl",
+        "autopilot",
+        "pytest",
+        "pylance",
+        "jsonc",
+        "buildspec",
+        "gitlens"
+    ],
+    "python-envs.pythonProjects": [
+        {
+            "path": ".",
+            "envManager": "ms-python.python:venv",
+            "packageManager": "ms-python.python:pip"
+        }
+    ]
 }
